# test-fastapi

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  poetry.toml  pyproject.toml  requirements.txt  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-image.yml  docker_image.yml  main_wappstore.yml  pypi-publish.yml  python-publish.yml
wappstore/: main.py  models.py  webmanifest.py
wappstore/data/: crud.py  database.py  models.py  seeding.py
wappstore/static/: output.css
wappstore/templates/apps/: detail.html  index.html  new.html
webapp/: main.py
webapp/data/: crud.py  models.py
webapp/static/: index.html  output.css
webapp/templates/: app.html  index.html
webapp/templates/apps/: index.html
